2008-12-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-{geo,ict}.txt: Add words.

2008-12-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/Makefile.am, +data/tdict-proper.txt, data/tdict-common.txt:
	Split proper nouns from tdict-common.txt into a new list.
	* data/tdict-{common,proper}.txt: Add words

2008-12-16  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/Makefile.am:  No need to install 'thbrk.abm' any more.

2008-12-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-{common,geo,ict}.txt: Add words.

2008-12-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Switch to libdatrie 0.2. (Requires libdatrie >= 0.1.99.2)

	* configure.in:
	  - Check for 'trietool-0.2' binary instead of 'trietool'
	  - Check for 'datrie-0.2' pkg-config instead of 'datrie'

	* src/thbrk/brk-maximal.c:
	  - Replace 'SBTrie' with 'Trie'
	  - Replace 'SBTrieState' with 'TrieState'
	  - Replace 'sb_trie_*' function calls with corresponding 'trie_*'
	  - For 'sb_trie_state_walk()', also convert TIS-620 char to UCS-4
	    before actually walking
	  - For 'sb_trie_open()', replace with 'trie_new_from_file()', plus
	    dir + path combined

	* data/Makefile.am:
	  - Replace '*.br' and '*.tl' targets with '*.tri'
	  - Add '-e tis-620' command-line argument to trietool
	* data/Makefile.am, data/thbrk.sbm -> data/thbrk.abm:
	  - Replace 'thbrk.sbm' (TIS-620) with 'thbrk.abm' (Unicode)

	* tests/Makefile.am:
	  - Add 'libthwchar.la' where 'libthbrk.la' is used, as th_tis2uni()
	    is required there

2008-06-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in, Makefile.am: Add --disable-dict option to prevent
	dictionary data generation.

2007-10-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* include/thai/thctype.h:
	* src/thcell/thcell.c:
	* src/thcoll/cweight.c:
	* src/thcoll/cweight.h:
	* src/thcoll/thcoll.c:
	* src/thctype/thctype.c:
	* src/thctype/wtt.c:
	* src/thinp/thinp.c: