@@ -1,5 +1,9 @@
 2008-12-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	* src/brk-maximal.c (brk_maximal_do): Adjust if-block a little bit.
+
+2008-12-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	* data/tdict-{geo,ict}.txt: Add words.
 
 2008-12-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>
@@ -1521,13 +1525,13 @@
 	* Makefile.am (1.2), configure.in (1.2), include/Makefile.am (1.2,
 	r0_1_1, r0_1_0), include/thai/Makefile.am (1.2), src/Makefile.am
 	(1.2), src/thcoll/Makefile.am (1.2, r0_1_1, r0_1_0),
-	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.161 2008-12-23 05:00:23 thep Exp $
+	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.162 2008-12-23 06:22:01 thep Exp $
 
 2001-06-12 Tuesday 20:14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thcoll/cweight.c (1.2, r0_1_0), src/thcoll/cweight.h (1.2,
 	r0_1_0), src/thcoll/thcoll.c (1.2), tests/test-thcoll.sh (1.2,
-	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.161 2008-12-23 05:00:23 thep Exp $
+	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.162 2008-12-23 06:22:01 thep Exp $
 
 2001-06-12 Tuesday 20:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
